rendering under Windows XP32 SP3 with latest SVN is white #36935

Closed
opened 2013-10-03 17:50:33 +02:00 by mathieu menuet · 20 comments

%%%--- Operating System, Graphics card ---
XP SP3, atom processor N270

- Blender version with error, and version that worked ---

latest SVN has the bug, 2.68a works

- Short description of error ---

rendering default scene with factory defaults is white. Rendering takes time, samples update (1/10, 2/10...) , but only white is displayed.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Hit F12 or enter "rendering" viewport mode on default scene with factory defaults and cycles.%%%

%%%--- Operating System, Graphics card --- XP SP3, atom processor N270 - Blender version with error, and version that worked --- latest SVN has the bug, 2.68a works - Short description of error --- rendering default scene with factory defaults is white. Rendering takes time, samples update (1/10, 2/10...) , but only white is displayed. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Hit F12 or enter "rendering" viewport mode on default scene with factory defaults and cycles.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Does this issue happen in the test build?
http://download.blender.org/release/Blender2.69/

What is your graphics card?%%%

%%%Does this issue happen in the test build? http://download.blender.org/release/Blender2.69/ What is your graphics card?%%%
Author

%%%Yes the Issue happen in the given test build.
The graphic card name in hardware manager is " Intel Mobile 945 chipset family ". But I use CPU Rendering.%%%

%%%Yes the Issue happen in the given test build. The graphic card name in hardware manager is " Intel Mobile 945 chipset family ". But I use CPU Rendering.%%%

%%%Eeeek… Atom and 945… Do we even want to try to support such hardware, esp. for cycles???%%%

%%%Eeeek… Atom and 945… Do we even *want* to try to support such hardware, esp. for cycles???%%%

%%%Couple of questions:

  • Does regular image display in Image Editor works fine?
  • Does Blender Internal rendering goes fine?

Also Brecht commited some changes at svn rev60509 which potentially might solve your issue, so please give it a try :)%%%

%%%Couple of questions: - Does regular image display in Image Editor works fine? - Does Blender Internal rendering goes fine? Also Brecht commited some changes at svn rev60509 which potentially might solve your issue, so please give it a try :)%%%
Author

%%%@Bastien I only use it to program in the train. Waiting every day until I come back home to check my changes is a bit too long. I prefer to correct bugs instantly. And I don't have money to buy a new laptop. Going to try new buildbot.%%%

%%%@Bastien I only use it to program in the train. Waiting every day until I come back home to check my changes is a bit too long. I prefer to correct bugs instantly. And I don't have money to buy a new laptop. Going to try new buildbot.%%%
Author

%%%@Sergey : Latest Buildbot (r60539) doesn't solves the problem.

  • Regular image display in Image Editor works
  • BI rendering works
  • 2.68a Cycles works%%%
%%%@Sergey : Latest Buildbot (r60539) doesn't solves the problem. - Regular image display in Image Editor works - BI rendering works - 2.68a Cycles works%%%

%%%I committed a possible fix, can you test the latest 32 bit windows build here (revision 60550 or newer)?
http://builder.blender.org/download/

I tested in a virtual machine with Windows XP 32 bit, but couldn't redo the issue, so I can't tell if it is fixed.
%%%

%%%I committed a possible fix, can you test the latest 32 bit windows build here (revision 60550 or newer)? http://builder.blender.org/download/ I tested in a virtual machine with Windows XP 32 bit, but couldn't redo the issue, so I can't tell if it is fixed. %%%
Author

%%%F12 render works, but not viewport. Even without a single light and with world surface shader removed, viewport render is white. As always, I restore factory defaults, so no option or plugin can affect the rendering. Changing the color management to Exposure -10 and gamma 0 has no effect, neither changing look, display or color space.%%%

%%%F12 render works, but not viewport. Even without a single light and with world surface shader removed, viewport render is white. As always, I restore factory defaults, so no option or plugin can affect the rendering. Changing the color management to Exposure -10 and gamma 0 has no effect, neither changing look, display or color space.%%%
Author

%%%If the bug is too hard to resolve and I'm the only one having it, you can leave it. Having to do a F12 render is not that problematic, since I don't personally need fast update of changes.%%%

%%%If the bug is too hard to resolve and I'm the only one having it, you can leave it. Having to do a F12 render is not that problematic, since I don't personally need fast update of changes.%%%

%%%Ok, can you attach the output of Help > System Info? I'm suspecting your graphics card can't correctly run the GLSL color management shader.

Also, is there any error in Windows > Console?

And, are you absolutely sure F12 rendering was broken before this fix in revision 60550? In your original report you mention the error can be reproduced by pressing F12, but the fix I did should affect both F12 render and viewport render, so if it affects only one of them, that would be quite strange.%%%

%%%Ok, can you attach the output of Help > System Info? I'm suspecting your graphics card can't correctly run the GLSL color management shader. Also, is there any error in Windows > Console? And, are you absolutely sure F12 rendering was broken before this fix in revision 60550? In your original report you mention the error can be reproduced by pressing F12, but the fix I did should affect both F12 render and viewport render, so if it affects only one of them, that would be quite strange.%%%

%%%Hello,

I'm on window XP SP3 and i have an Intel G41 (support OpenGL 2.1) with it.
I tested on r60539 (from before you removed the SS2 optimisation from what i read) for which i loaded default factory
I then switched to Cycles render and pressed F12 , the default Cube was correctly rendered by Cycles (of course CPU rendering)
I then switched the viewport to Rendered, and again the viewport was correctly rendered.

I didn't observed the white render bug on my system with r60539, but in the same time i usually never use Cycles in my Blender works so i wouldn't have noticed if something changed in a specific version.

%%%

%%%Hello, I'm on window XP SP3 and i have an Intel G41 (support OpenGL 2.1) with it. I tested on r60539 (from before you removed the SS2 optimisation from what i read) for which i loaded default factory I then switched to Cycles render and pressed F12 , the default Cube was correctly rendered by Cycles (of course CPU rendering) I then switched the viewport to Rendered, and again the viewport was correctly rendered. I didn't observed the white render bug on my system with r60539, but in the same time i usually never use Cycles in my Blender works so i wouldn't have noticed if something changed in a specific version. %%%
Author

%%%@brecht There is no error in the console. The system-info.txt is not created despite the console output is in system-info.txt. I did a search on all my partition, nothing found. I manually searched temp folder, blender installation and configuration folders... nothing. I tested again on r60295, you are right the F12 render works, not sure on which version I had the F12 problem. It may be a mistake. The oldest build I could find on my HDD was r60095 and the bug was only for viewport render as well.
As the changes didn't solved the problem, you can revert them. Would be a shame to remove optimisations for other people. Atom processor seems to support up to SSE4 anyway : http://ark.intel.com/products/36331.
As said before, I don't mind that much if the viewport cycles render is broken on such an old graphic card now that F12 is working again with all colour management options (I can change to RRT, film as well as change the look and it all updates fast)%%%

%%%@brecht There is no error in the console. The system-info.txt is not created despite the console output is in system-info.txt. I did a search on all my partition, nothing found. I manually searched temp folder, blender installation and configuration folders... nothing. I tested again on r60295, you are right the F12 render works, not sure on which version I had the F12 problem. It may be a mistake. The oldest build I could find on my HDD was r60095 and the bug was only for viewport render as well. As the changes didn't solved the problem, you can revert them. Would be a shame to remove optimisations for other people. Atom processor seems to support up to SSE4 anyway : http://ark.intel.com/products/36331. As said before, I don't mind that much if the viewport cycles render is broken on such an old graphic card now that F12 is working again with all colour management options (I can change to RRT, film as well as change the look and it all updates fast)%%%

%%%From what i have read bliblu bli's " Intel Mobile 945 chipset family " supports OpenGL 1.4 , could the OpenGL version be linked to the problem ?%%%

%%%From what i have read bliblu bli's " Intel Mobile 945 chipset family " supports OpenGL 1.4 , could the OpenGL version be linked to the problem ?%%%

%%%The system-info.txt is in the Blender text editor, if you open a text editor it should be there, and you can then save it to disk.

And yes, given that F12 render works it is definitely related to OpenGL and GLSL feature support, so the system-info is important to show us exactly which version the driver supports and which extensions are available.%%%

%%%The system-info.txt is in the Blender text editor, if you open a text editor it should be there, and you can then save it to disk. And yes, given that F12 render works it is definitely related to OpenGL and GLSL feature support, so the system-info is important to show us exactly which version the driver supports and which extensions are available.%%%

%%%I found the issue now. The problem is that this graphics card doesn't support half float textures, which we need. Fixed that now, but it means color management will not work in the 3D viewport with this graphics card, only for final rendering, same as it was in 2.68a.

Fix is in revision 60573.%%%

%%%I found the issue now. The problem is that this graphics card doesn't support half float textures, which we need. Fixed that now, but it means color management will not work in the 3D viewport with this graphics card, only for final rendering, same as it was in 2.68a. Fix is in revision 60573.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Sorry, I wouldn't have thought about looking in the text editor by myself :D Attached the sysinfo.txt file with openGL and compil flags info.%%%

%%%Sorry, I wouldn't have thought about looking in the text editor by myself :D Attached the sysinfo.txt file with openGL and compil flags info.%%%
Author

%%%Thanks Brecht, but after downloading r60573 from buildbot, it still renders white in viewport with factory defaults. As mentioned above, I attached the sysinfo.txt.%%%

%%%Thanks Brecht, but after downloading r60573 from buildbot, it still renders white in viewport with factory defaults. As mentioned above, I attached the sysinfo.txt.%%%

%%%Another fix was committed now, in revision 60709.%%%

%%%Another fix was committed now, in revision 60709.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36935
No description provided.