Attempt to fix #36935: disable SSE optimizations on 32 bit windows too. Something strange is going on here, but I don't think it can be fixed before the release, if it is worth at all spending time on this.